Added Singleton, ObjectFactory, and Scene classes, updated GameObject and the Component child classes for use with Scene

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -178,6 +178,7 @@
     <ClInclude Include="Core\Assert.h" />
     <ClInclude Include="Core\Factory.h" />
     <ClInclude Include="Core\Json.h" />
+    <ClInclude Include="Core\Singleton.h" />
     <ClInclude Include="Core\System.h" />
     <ClInclude Include="Core\Timer.h" />
     <ClInclude Include="Engine.h" />
@@ -194,6 +195,8 @@
     <ClInclude Include="Math\Vector2.h" />
     <ClInclude Include="Objects\GameObject.h" />
     <ClInclude Include="Objects\Object.h" />
+    <ClInclude Include="Objects\ObjectFactory.h" />
+    <ClInclude Include="Objects\Scene.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resources\Resource.h" />
     <ClInclude Include="Resources\ResourceManager.h" />
@@ -212,6 +215,8 @@
     <ClCompile Include="Math\Transform.cpp" />
     <ClCompile Include="Math\Vector2.cpp" />
     <ClCompile Include="Objects\GameObject.cpp" />
+    <ClCompile Include="Objects\ObjectFactory.cpp" />
+    <ClCompile Include="Objects\Scene.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
